# first-drafter-alpha

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml
app/: callback.py  config.py  main.py  prompt_temp.py  statements.py  util.py
db/: add_data.py  config.py  create_db.py  query_data.py
db/data/context/: doc_context.json
